# CUDA_DEVICE_CHECK

./: .gitignore  CMakeLists.txt  README.rst
src/: CMakeLists.txt  gpu_info_class.cu  gpu_info_class.hpp  test_easy_calculation.cu  test_memory_allocation.cu  test_memory_copy.cu
